--- a/template.yaml
+++ b/template.yaml
@@ -62,12 +62,12 @@ Resources:
       Runtime: python3.9
       Architectures:
       - x86_64
-      Events:
-        HelloWorld:
-          Type: Api # More info about API Event Source: https://github.com/awslabs/serverless-application-model/blob/master/versions/2016-10-31.md#api
-          Properties:
-            Path: /hello
-            Method: get
+      # Events:
+      #   HelloWorld:
+      #     Type: Api # More info about API Event Source: https://github.com/awslabs/serverless-application-model/blob/master/versions/2016-10-31.md#api
+      #     Properties:
+      #       Path: /hello
+      #       Method: get
       Environment:
         Variables:
           TOPIC_ARN: !ImportValue SNSTopicArn            
