Added missing role binding to lambda

--- a/template.yaml
+++ b/template.yaml
@@ -60,6 +60,7 @@ Resources:
       CodeUri: UploadsNotificationFunction/
       Handler: app.lambda_handler
       Runtime: python3.9
+      Role: !GetAtt LambdaRole.Arn
       Architectures:
       - x86_64
       Environment:
