--- a/template.yaml
+++ b/template.yaml
@@ -57,6 +57,7 @@ Resources:
   UploadsNotificationFunction:
     Type: AWS::Serverless::Function # More info about Function Resource: https://github.com/awslabs/serverless-application-model/blob/master/versions/2016-10-31.md#awsserverlessfunction
     Properties:
+      FunctionName: UploadsNotificationFunction
       CodeUri: UploadsNotificationFunction/
       Handler: app.lambda_handler
       Runtime: python3.9
